--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-articles-listing></app-articles-listing>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
