--- a/frontend/src/app/articles-listing/article-card/article-card.component.css
+++ b/frontend/src/app/articles-listing/article-card/article-card.component.css
@@ -6,12 +6,17 @@
   -webkit-box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
   -moz-box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
   box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
+  width: 90%;
   max-width: 600px;
   transition-duration: 0.3s;
 }
 
 .card:hover{
-  transform: scale(1.02);
+  cursor: pointer;
+  transform: scale(1.01);
+  -webkit-box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 1);
+  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 1);
 }
 
 .container {
