single article, favorites, styles

--- a/frontend/src/app/articles-listing/article-card/favorite-article-toggler/favorite-article-toggler.component.html
+++ b/frontend/src/app/articles-listing/article-card/favorite-article-toggler/favorite-article-toggler.component.html
@@ -1,2 +1,3 @@
+<ng-content></ng-content>
 <fa-icon [icon]="faHeart" [ngClass]="{'heart':true, 'basic': !isFavorite, 'favorite': isFavorite}" size="2x" (click)="toggleFavorite()"></fa-icon>
 
