--- a/frontend/src/app/articles-listing/article-card/article-card.component.html
+++ b/frontend/src/app/articles-listing/article-card/article-card.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="title">{{article.title}}</div>
-  <p class="summary">{{article.summary}}</p>
+<!--  <p class="summary">{{article.summary}}</p>-->
 
   <!--  <p>{{article.id}}</p>-->
   <!--  <p>{{article.url}}</p>-->
@@ -25,3 +25,4 @@
   <!--    <p>{{event.id}} - {{event.provider}}</p>-->
   <!--  </div>-->
 </div>
+
