--- a/frontend/src/app/articles-listing/articles-listing.component.html
+++ b/frontend/src/app/articles-listing/articles-listing.component.html
@@ -1,5 +1,12 @@
+<app-loader *ngIf="!isContentReadyToShow"></app-loader>
+
 <ng-container *ngIf="articles | async as articles">
   <div>
-    <app-article-card *ngFor="let article of articles"  [article]="article"></app-article-card>
+    <app-article-card
+      *ngFor="let article of articles"
+      [article]="article"
+      [routerLink]="['/articles',article.id]"
+    >
+    </app-article-card>
   </div>
 </ng-container>
