loader, favorites listing, http request with params

--- a/frontend/src/app/articles-listing/articles-listing.component.html
+++ b/frontend/src/app/articles-listing/articles-listing.component.html
@@ -1,3 +1,7 @@
+
+<div class="refresh" (click)="refreshListOfArticles()">REFRESH ARTICLES</div>
+<div class="favorites" (click)="showFavoritesArticles()">FAVORITES</div>
+
 <app-loader *ngIf="!isContentReadyToShow"></app-loader>
 
 <ng-container *ngIf="articles | async as articles">
