--- a/frontend/src/app/common/components/header/header.component.html
+++ b/frontend/src/app/common/components/header/header.component.html
@@ -2,6 +2,6 @@
   <div class="container">
     <img src="./assets/logo.png" alt="logo" class="logo">
     <div class="title">Spaceflight News</div>
-    <div class="toggler"> DARK</div>
+    <app-theme-switch></app-theme-switch>
   </div>
 </header>
