--- a/frontend/src/app/common/components/theme-switch/theme-switch.component.html
+++ b/frontend/src/app/common/components/theme-switch/theme-switch.component.html
@@ -1,1 +1,1 @@
-<fa-icon [icon]="icon" size="2x" (click)="toggleTheme()"></fa-icon>
+<fa-icon class="switch" [icon]="icon" size="2x" (click)="toggleTheme()"></fa-icon>
