--- a/frontend/src/app/articles-listing/articles-listing.component.html
+++ b/frontend/src/app/articles-listing/articles-listing.component.html
@@ -1,15 +1,21 @@
-
-<div class="refresh" (click)="refreshListOfArticles()">REFRESH ARTICLES</div>
-<div class="favorites" (click)="showFavoritesArticles()">FAVORITES</div>
-
-<app-loader *ngIf="!isContentReadyToShow"></app-loader>
-
-<ng-container *ngIf="articles | async as articles">
-  <div>
-    <app-article-card
-      *ngFor="let article of articles"
-      [article]="article"
-    >
-    </app-article-card>
+<div class="content">
+  <div class="tools">
+    <app-custom-button [customClass]="'favoriteButton'" [icon]="faDownload" [text]="'newest articles'"
+                       (callback)="refreshListOfArticles()"></app-custom-button>
+    <app-custom-button [icon]="faHeart" [text]="'favorites'"
+                       (callback)="showFavoritesArticles()"></app-custom-button>
   </div>
-</ng-container>
+  <app-loader class="listing" *ngIf="!(isContentReadyToShow | async)"></app-loader>
+  <ng-container *ngIf="articles | async as articles">
+    <div class="listing" *ngIf="(isContentReadyToShow | async)">
+      <app-article-card
+        *ngFor="let article of articles"
+        [article]="article"
+      >
+      </app-article-card>
+    </div>
+  </ng-container>
+</div>
+
+
+
