--- a/frontend/src/app/common/components/header/header.component.css
+++ b/frontend/src/app/common/components/header/header.component.css
@@ -1,13 +1,15 @@
-header, header .container{
+header, header .container {
   width: 100%;
   height: 100px;
 }
 
-header{
-  background: var(--header-bg);
+header {
+  background: var(--nav);
+  -webkit-box-shadow: 0px 0px 9px 1px #000000;
+  box-shadow: 0px 0px 9px 1px #000000;
 }
 
-header .container{
+header .container {
   max-width: 1024px;
   margin: auto;
   display: flex;
@@ -16,15 +18,16 @@ header .container{
   padding: 0 10px;
 }
 
-.logo{
+.logo {
   width: auto;
   height: 90%;
   border-radius: 100%;
 }
 
-.title{
+.title {
   font-family: 'Maven Pro', sans-serif;
   font-size: clamp(0.5rem, 10vw, 2rem);
   margin: auto;
   color: white;
+  /*  TODO:COLOR*/
 }
