--- a/frontend/src/app/single-article/single-article.component.html
+++ b/frontend/src/app/single-article/single-article.component.html
@@ -1,6 +1,4 @@
-
 <app-loader *ngIf="!article && !isContentReadyToShow"></app-loader>
-<!--<app-loader *ngIf="true"></app-loader>-->
 
 <div class="article" *ngIf="article && isContentReadyToShow">
 
@@ -23,8 +21,11 @@
 
   <div class="summary">{{article.summary}}</div>
 
-  <a href="{{article.url}}">
-    Read more at: {{article.newsSite}}
-  </a>
+  <div class="buttonWrapper">
+    <a href="{{article.url}}">
+      <app-custom-button text="Read more at: {{article.newsSite}}" customClass="readMoreButton" [icon]="faCaretRight" >
+      </app-custom-button>
+    </a>
+  </div>
 </div>
 
