--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,13 @@
-<p>page-not-found works!</p>
+<div class="content">
+  <div class="code">
+    <div>4</div>
+    <div>0</div>
+    <div>4</div>
+  </div>
+  <div class="info">PAGE NOT FOUND</div>
+  <div class="buttonWrapper">
+    <a routerLink="/">
+      <app-custom-button text="Back to homepage" [icon]="faUndo" customClass="backHomeButton"></app-custom-button>
+    </a>
+  </div>
+</div>
