--- a/frontend/src/app/articles-listing/article-card/article-card.component.css
+++ b/frontend/src/app/articles-listing/article-card/article-card.component.css
@@ -31,6 +31,7 @@
   letter-spacing: 2px;
   font-weight: 500;
   color: white;
+  /*  TODO:COLOR*/
 
   position: absolute;
   bottom: 3px;
@@ -40,6 +41,7 @@
   /*border: 1px solid red;*/
   padding: 30px 0 5px 10px;
   background: rgb(0, 0, 0);
+  /*  TODO:COLOR*/
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0) 74%);
 }
 
@@ -68,6 +70,7 @@
 .card .summary {
   font-size: 0.7rem;
   color: #989898;
+  /*  TODO:COLOR*/
 }
 
 .toggleFavorite {
