--- a/frontend/src/app/articles-listing/articles-listing.component.css
+++ b/frontend/src/app/articles-listing/articles-listing.component.css
@@ -1,4 +1,5 @@
 .content {
+  font-family: 'Maven Pro', sans-serif;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 20vh auto;
@@ -18,6 +19,14 @@
   -moz-box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
   box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
   width: 100%;
+}
+
+.counter{
+  color: var(--font2);
+  font-weight: bold;
+  padding: 0 0 10px 10px;
+  letter-spacing: 1px;
+  text-align: center;
 }
 
 .listing {
