--- a/frontend/src/app/articles-listing/tools/tools.component.css
+++ b/frontend/src/app/articles-listing/tools/tools.component.css
@@ -53,6 +53,24 @@ input[type="radio"] {
   display: none;
 }
 
+
 .selected {
-  background: var(--add);
+  background: var(--additional);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+div.page > *:not(input){
+  cursor: pointer;
+  padding: 5px 10px 5px 20px;
 }
