favorites articles, filters, mobile look

--- a/frontend/src/app/articles-listing/tools/tools.component.html
+++ b/frontend/src/app/articles-listing/tools/tools.component.html
@@ -61,6 +61,6 @@
     <fa-icon [icon]="faCaretRight" size="4x" (click)="incrementPage()"></fa-icon>
   </div>
 
-  <app-custom-button [icon]="faUndo" text="Reset" (callback)="reset()">
+  <app-custom-button [icon]="faUndo" text="Reset" (callback)="resetAndSearch()">
   </app-custom-button>
 </form>
