--- a/frontend/src/app/articles-listing/articles-listing.component.css
+++ b/frontend/src/app/articles-listing/articles-listing.component.css
@@ -19,6 +19,8 @@
   -moz-box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
   box-shadow: 0px 10px 22px -15px rgba(0, 0, 0, 1);
   width: 100%;
+  z-index: 100;
+  background: var(--main);
 }
 
 .counter{
@@ -35,7 +37,7 @@
   overflow-y: scroll;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: var(--desktop-min-width)) {
   .content {
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 40vh 40vh 20vh;
