--- a/frontend/src/app/articles-listing/tools/tools.component.css
+++ b/frontend/src/app/articles-listing/tools/tools.component.css
@@ -1,5 +1,18 @@
 form {
   color: var(--font);
+  background: var(--main);
+  position: relative;
+}
+
+form::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 30px;
+  background: var(--additional);
+  left: 0;
+  bottom: -30px;
+  border: 1px solid var(--additional);
 }
 
 .control {
@@ -7,7 +20,6 @@ form {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 20px 0;
 }
 
 .control > div[class^=order] {
@@ -53,7 +65,6 @@ input[type="radio"] {
   display: none;
 }
 
-
 .selected {
   background: var(--additional);
 }
@@ -73,4 +84,14 @@ input[type=number] {
 div.page > *:not(input){
   cursor: pointer;
   padding: 5px 10px 5px 20px;
+}
+
+@media (min-width: var(--desktop-min-width)) {
+  .control {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 0;
+  }
 }
