--- a/frontend/src/app/common/components/header/header.component.css
+++ b/frontend/src/app/common/components/header/header.component.css
@@ -1,6 +1,6 @@
 header, header .container {
   width: 100%;
-  height: 100px;
+  height: 10vh;
 }
 
 header {
@@ -20,13 +20,13 @@ header .container {
 
 .logo {
   width: auto;
-  height: 90%;
+  height: 80%;
   border-radius: 100%;
 }
 
 .title {
   font-family: 'Maven Pro', sans-serif;
-  font-size: clamp(0.5rem, 10vw, 2rem);
+  font-size: clamp(0.3rem, 8vw, 2rem);
   margin: auto;
   color: var(--font);
 }
