--- a/frontend/src/app/common/components/footer/footer.component.html
+++ b/frontend/src/app/common/components/footer/footer.component.html
@@ -1,8 +1,14 @@
 <footer>
   <div class="container">
     <div>
-      <div>Jakub Radzik</div>
-      <div>Visit my github</div>
+      <div>Made by: Jakub Radzik</div>
+      <div>
+        <a href="https://github.com/radzikoska123">
+          <app-custom-button [icon]="icon" text="Visit my github" customClass="footerButton">
+          </app-custom-button>
+        </a>
+      </div>
+
     </div>
     <div>
       <div>App made using: https://spaceflightnewsapi.net/</div>
