--- a/frontend/src/app/common/components/custom-button/custom-button.component.html
+++ b/frontend/src/app/common/components/custom-button/custom-button.component.html
@@ -1,4 +1,5 @@
 <div (click)="callFunction()" [ngClass]="[customClass]" >
   <fa-icon [icon]="icon" size="2x" ></fa-icon>
   <span>{{text}}</span>
+  <ng-content></ng-content>
 </div>
