--- a/frontend/src/app/single-article/single-article.component.html
+++ b/frontend/src/app/single-article/single-article.component.html
@@ -2,6 +2,14 @@
 
 <div class="article" *ngIf="article && isContentReadyToShow">
 
+  <div class="buttonWrapper">
+    <a routerLink="/articles">
+      <app-custom-button customClass="readMoreButton" [icon]="faCaretRight" >
+        <span>Back to: <span class="specialText">articles</span></span>
+      </app-custom-button>
+    </a>
+  </div>
+
   <div class="container">
     <div class="imgBar">
       <div>
@@ -23,7 +31,8 @@
 
   <div class="buttonWrapper">
     <a href="{{article.url}}">
-      <app-custom-button text="Read more at: {{article.newsSite}}" customClass="readMoreButton" [icon]="faCaretRight" >
+      <app-custom-button customClass="readMoreButton" [icon]="faCaretRight" >
+        <span>Read more at: <span class="specialText">{{article.newsSite}}</span></span>
       </app-custom-button>
     </a>
   </div>
