--- a/frontend/src/app/articles-listing/tools/tools.component.html
+++ b/frontend/src/app/articles-listing/tools/tools.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="searchForm">
+<form [formGroup]="searchForm" [ngClass]="{'hiddenForm': isPanelHidden && isMobile}">
   <div class="counter">Available articles: {{articlesCount | async}}</div>
   <app-custom-button [customClass]="'refreshButton'" [icon]="icons.download" [text]="'newest articles'"
                      (callback)="refreshListOfArticles()"></app-custom-button>
@@ -12,10 +12,10 @@
       id="numberOfResults"
       formControlName="numberOfResults"
       (change)="updateFormStateAndSearch()"
-      min="10"
-      max="100"
-      value="20"
-      step="10"
+      min="5"
+      max="50"
+      value="10"
+      step="5"
     >
     <div>{{searchForm.value.numberOfResults}}</div>
   </div>
@@ -60,7 +60,7 @@
   </div>
 
   <label>Page:</label>
-  <div class="control page" (click)="updateFormStateAndSearch()">
+  <div class="control page" (click)="updateFormStateAndSearch(false)">
     <fa-icon [icon]="icons.caretLeft" size="4x" (click)="decrementPage()"></fa-icon>
     <input type="number" name="page" id="page" formControlName="page" [attr.disabled]="true">
     <fa-icon [icon]="icons.caretRight" size="4x" (click)="incrementPage()"></fa-icon>
@@ -68,4 +68,15 @@
 
   <app-custom-button [icon]="icons.undo" text="Reset" (callback)="resetAndSearch()">
   </app-custom-button>
+  <div class="hideForm" [ngClass]="{'rotatedChevron':isPanelHidden}" (click)="togglePanelVisibility()">
+    <fa-icon [icon]="icons.chevronUp" size="2x"></fa-icon>
+  </div>
+</form>
+
+<form class="mobileForm" [ngClass]="{'stickyToBottom':isPanelHidden && isMobile}" [formGroup]="searchForm">
+  <div class="control page" (click)="updateFormStateAndSearch(false)">
+    <fa-icon [icon]="icons.caretLeft" size="4x" (click)="decrementPage()"></fa-icon>
+    <input type="number" name="page" formControlName="page" [attr.disabled]="true">
+    <fa-icon [icon]="icons.caretRight" size="4x" (click)="incrementPage()"></fa-icon>
+  </div>
 </form>
