--- a/frontend/src/app/common/components/header/header.component.css
+++ b/frontend/src/app/common/components/header/header.component.css
@@ -1,10 +1,15 @@
+* {
+  z-index: 10000;
+}
+
 header, header .container {
   width: 100%;
-  height: 10vh;
+  height: var(--header-height);
+  background: var(--nav) !important;
 }
 
 header {
-  background: var(--nav);
+  position: absolute;
   -webkit-box-shadow: 0px 0px 9px 1px #000000;
   box-shadow: 0px 0px 9px 1px #000000;
 }
