--- a/frontend/src/app/single-article/single-article.component.css
+++ b/frontend/src/app/single-article/single-article.component.css
@@ -1,46 +1,54 @@
-.article{
+.article {
   width: 100%;
   max-width: 900px;
   margin: auto;
   font-family: 'Maven Pro', sans-serif;
   letter-spacing: 1px;
+  padding-top: var(--header-height);
 }
 
-.container .imgBar{
+.container .imgBar {
   position: absolute;
   width: 100%;
   padding: 10px 10px 40px 10px;
   color: #fff;
   background: rgba(0, 0, 0, 0.25);
-  background: linear-gradient(180deg, rgba(0,0,0,0.8) 10%, rgba(0,0,0,0) 100%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 10%, rgba(0, 0, 0, 0) 100%);
   letter-spacing: 2px;
-  font-size: clamp(1rem, 2vw ,2rem);
+  font-size: clamp(1rem, 2vw, 2rem);
 }
 
-.article .container{
+.article .container {
   position: relative;
 }
 
-.article .container img{
+.article .container img {
   width: 100%;
 }
 
-.title{
-  font-size: clamp(1rem, 5vw, 2rem);
+.title, .summary {
+  margin: 20px;
+}
+
+.title {
+  font-size: clamp(1rem, 8vw, 2rem);
   text-align: justify;
   color: var(--font2);
 }
 
-.summary{
-  font-size: clamp(0.7rem, 3vw, 1rem);
+.summary {
+  font-size: clamp(0.7rem, 5vw, 1.3rem);
   text-align: justify;
-  line-height: 1.3rem;
-  margin: 20px 0;
+  line-height: 1.5rem;
   color: var(--font);
 }
 
-.buttonWrapper{
+.buttonWrapper {
   width: 100%;
   max-width: 400px;
-  /*border: 1px solid #000;*/
+  margin: 10px 0;
+}
+
+.specialText {
+  color: var(--font2);
 }
