button class unification, landing page MVP

--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,12 @@
-<p>landing-page works!</p>
-<a routerLink="/articles">
-  <app-custom-button text="Articles"></app-custom-button>
-</a>
+<div class="landing">
+  <h1>Spaceflight news</h1>
+  <h2>Working On !</h2>
+  <h4>This effect is just a joke and will be removed util next week, enjoy. Hope for feedback <3</h4>
+
+  <div class="buttonWrapper">
+    <a routerLink="/articles">
+      <app-custom-button [icon]="icon" text="Articles" customClass="casualButton"></app-custom-button>
+    </a>
+  </div>
+</div>
+
