--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -7,7 +7,7 @@
   <div class="info">PAGE NOT FOUND</div>
   <div class="buttonWrapper">
     <a routerLink="/">
-      <app-custom-button text="Back to homepage" [icon]="faUndo" customClass="backHomeButton"></app-custom-button>
+      <app-custom-button text="Back to homepage" [icon]="faUndo" customClass="casualButton"></app-custom-button>
     </a>
   </div>
 </div>
