--- a/frontend/src/app/common/components/footer/footer.component.css
+++ b/frontend/src/app/common/components/footer/footer.component.css
@@ -1,7 +1,6 @@
 footer{
   font-family: 'Maven Pro', sans-serif;
   width: 100%;
-  margin-top: 200px;
   background: var(--foot);
 }
 
@@ -15,7 +14,7 @@ footer .container{
   flex-wrap: wrap;
   justify-content: center;
   align-items: stretch;
-  min-height: 300px;
+  min-height: var(--footer-height);
 }
 
 .container > div{
