--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -18,6 +18,7 @@ body {
 
 :root {
   --header-height: 10vh;
+  --footer-height: 300px;
 }
 
 html[data-theme='light'] {
@@ -70,16 +71,8 @@ html[data-theme='dark'] {
   color: #9494ef;
 }
 
-.readMoreButton {
+.casualButton {
   /*width: 50%;*/
-  color: var(--font3);
-}
-
-.backHomeButton {
-  color: var(--font);
-}
-
-.footerButton{
   color: var(--font);
 }
 
