--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<app-scroll-to-top (customAction)="backToTop()" [ngClass]="{'visible': isBackToTopButtonVisible, 'notVisible': !isBackToTopButtonVisible}">
+</app-scroll-to-top>
