--- a/frontend/src/app/common/components/header/header.component.html
+++ b/frontend/src/app/common/components/header/header.component.html
@@ -1,7 +1,11 @@
 <header>
   <div class="container">
-    <img src="./assets/logo.png" alt="logo" class="logo">
-    <div class="title">Spaceflight News</div>
+    <a routerLink="">
+      <img src="./assets/logo.png" alt="logo" class="logo">
+    </a>
+    <a routerLink="">
+      <div class="title">Spaceflight News</div>
+    </a>
     <app-theme-switch></app-theme-switch>
   </div>
 </header>
