--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div class="landing">
   <h1>Spaceflight news</h1>
   <h2>Working On !</h2>
-  <h4>This effect is just a joke and will be removed util next week, enjoy. Hope for feedback <3</h4>
+  <h4>Enjoy. Hope for feedback <3</h4>
 
   <div class="buttonWrapper">
     <a routerLink="/articles">
