--- a/frontend/src/app/common/components/header/header.component.css
+++ b/frontend/src/app/common/components/header/header.component.css
@@ -20,12 +20,13 @@ header .container {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   padding: 0 10px;
 }
 
 .logo {
   width: auto;
-  height: 80%;
+  height: calc(var(--header-height) - 20px);
   border-radius: 100%;
 }
 
